jEdit 4.5 version history
       (changes since jEdit 4.4.2)
:encoding=UTF-8:

{{{ Version 4.5.1

Thanks to Björn "Vampire" Kautler for contributing to this release.

{{{ Bug Fixes

 - Fixed text area curruption (strange exceptions and/or inconsitent
   display) which could happen when multiple files are opened
   simultaneously in a text area. This could also happen on some other
   minor conditions. (SF.net bug #3442116 - Kazutoshi Satoda)

}}}
{{{ Miscellaneous


}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

{{{ Version 4.5.0

Thanks to Shlomy Reinstein, Alan Ezust, Jarek Czekalski, Michael Pradel, Evan
Wright, Matthieu Casanova, Nathan Gray and Björn "Vampire" Kautler for
contributing to this release.

{{{ Bug Fixes

- Inner class of FilteredListModel passes wrong "this" (patch# 3477759 - 
  Michael Pradel)

- Large file mode text description dialog (#3456370) (Matthieu Casanova)

- VFS Browser was stuck if trying to browse a VFS that needed a session but the
  session could not be opened (#3471386) (Matthieu Casanova)

- Fixed Copy_Line macro that was copying one character of the next line
  (#3454377) (Matthieu Casanova)

- Fixed a NPE when trying to activate a plugin if one of it's dependencies is
  missing (#2077205) (Matthieu Casanova)

- When parsing buffer-local properties, there was a problem with escape
  processing that prevented buffer-local properties to be read sometimes
  (Bug #3438680 - Björn "Vampire" Kautler)

- Building offline was prevented by a bug in Ivy, this is workarounded
  now in the Ivy settings for jEdit. (Bug #3437212 - Björn "Vampire" Kautler)

- Fixed #3163058: middle mouse button paste doesn't respect gutter selection.
  (Shlomy Reinstein)

- ":encoding=...:" was treated as buffer local property and caused
  confusion about what encoding was used at loading/saving the buffer.
  (SF.net patch #3434651 - Jarek Czekalski, for bug #1643580)

- Fixed #3434527: Jump to wrong line with folded target (Evan Wright)
